# the-elder-scrolls-speak

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-test.yml  frontend-deploy.yml  ingest.yml  terraform-apply.yml  terraform-plan.yml
backend/: build.sh  pyproject.toml
backend/api/: handlers.py  signing.py
backend/ingestion/: fetch_uesp.py  handler.py  http.py  matcher.py  scrape_imperial.py
backend/shared/: dynamo.py  models.py  slug.py
backend/tests/: test_matcher.py  test_slug.py  test_voices.py
backend/tts/: handler.py  voices.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Player.tsx
frontend/src/routes/: BookDetail.tsx  Library.tsx
frontend/src/store/: player.ts
infra/envs/dev/: main.tf  outputs.tf  variables.tf
infra/modules/api/: main.tf
infra/modules/edge_auth/: main.tf
infra/modules/frontend/: main.tf
infra/modules/ingestion/: main.tf
infra/modules/oidc/: main.tf
infra/modules/storage/: main.tf  outputs.tf
infra/modules/tts/: main.tf
