[project]
name = "tes-speak-backend"
version = "0.1.0"
description = "Lambdas for tes-speak: ingestion, tts, api."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
  "httpx>=0.27",
  "selectolax>=0.3.21",
  "rapidfuzz>=3.9",
  "pydantic>=2.7",
  "aws-lambda-powertools>=3.0",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "moto[dynamodb,s3]>=5",
  "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
